Enable live reload for webpack-dev-server

--- a/assets/index.html
+++ b/assets/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>main</title>
+    <title>BIG IoT Driver</title>
     <script src="app.js"></script>
     <style>
     #flowhub_debug_url.nodebug {
