--- a/assets/index.html
+++ b/assets/index.html
@@ -35,11 +35,17 @@
       }
       #map {
         width: 100vw;
-        height: 100vh;
+        height: 70vh;
       }
       #map .leaflet-container {
         width: 100vw;
-        height: 100vh;
+        height: 70vh;
+      }
+      #details {
+        top: 70vh;
+        width: 100vw;
+        height: 30vh;
+        overflow-y: scroll;
       }
     </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.css">
