--- a/assets/index.html
+++ b/assets/index.html
@@ -12,16 +12,20 @@
       display: block;
       position: fixed;
       z-index: 999;
-      right: 36px;
-      top: 36px;
+      width: 20em;
+      height: 1.5em;
+      right: -6.5em;
+      top: 3em;
+      text-align: center;
       background-color: hsla(210, 98%, 46%, .8) !important;
       border-color: hsl(210, 98%, 46%) !important;
       color: white !important;
       text-decoration: none;
-      padding: 8px;
-      border-radius: 8px;
+      padding: 1em;
+      box-sizing: content-box;
       cursor: pointer;
-      font-family: sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      transform: rotate(45deg);
     }
     </style>
     <style>
