--- a/assets/index.html
+++ b/assets/index.html
@@ -48,8 +48,9 @@
         overflow-y: scroll;
       }
     </style>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.css">
-    
+
+    <link rel="stylesheet" href="./vendor/leaflet/leaflet.css">
+
   </head>
   <body>
     <a id='flowhub_debug_url' target="_blank" class='nodebug'>Debug in Flowhub</a>
