--- a/assets/index.html
+++ b/assets/index.html
@@ -2,14 +2,20 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>BIG IoT Driver</title>
+    <title>Park My Car</title>
     <script src="app.js"></script>
     <link rel="stylesheet" href="app.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.css">
     
   </head>
   <body>
-    <a id='flowhub_debug_url' target="_blank" class='nodebug'>Debug in Flowhub</a>
+    <section id="app_splash">
+      <h1>Park My Car</h1>
+      <h2>Loading...</h2>
+      <p>Powered by <a href="https://flowhub.io">Flowhub</a> and <a href="https://big-iiot.eu">BIG IoT</a></p>
+    </section>
+
+    <a id="flowhub_debug_url" target="_blank" class='nodebug'>Debug in Flowhub</a>
     
     <script>
       var noflo = require('noflo');
