Add a marker for current position

--- a/assets/index.html
+++ b/assets/index.html
@@ -66,6 +66,10 @@
         fill: red;
       }
 
+      .current-location-icon {
+        width: 3vw;
+      }
+
     </style>
 
     <link rel="stylesheet" href="./vendor/leaflet/leaflet.css">
