Fix BIG IoT URL

--- a/assets/index.html
+++ b/assets/index.html
@@ -13,7 +13,7 @@
     <section id="app_splash">
       <h1>Park My Car</h1>
       <h2>Loading...</h2>
-      <p>Powered by <a href="https://flowhub.io">Flowhub</a> and <a href="https://big-iiot.eu">BIG IoT</a></p>
+      <p>Powered by <a href="https://flowhub.io">Flowhub</a> and <a href="http://big-iot.eu">BIG IoT</a></p>
     </section>
 
     <a id="flowhub_debug_url" target="_blank" class='nodebug'>Debug in Flowhub</a>
