--- a/assets/index.html
+++ b/assets/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="app.css">
     <link rel="stylesheet" href="./vendor/leaflet/leaflet.css">
+    <meta name="theme-color" content="hsl(210, 98%, 46%)">
 
   </head>
   <body>
