Deploy flowhub/bigiot-driver-app to github.com/flowhub/bigiot-driver-app.git:gh-pages

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <link rel="stylesheet" href="app.css">
     <link rel="stylesheet" href="./vendor/leaflet/leaflet.css">
+    <meta name="theme-color" content="hsl(210, 98%, 46%)">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui" />
 
   </head>
   <body>
