Setup Webapp Manifest and Service Worker

--- a/assets/index.html
+++ b/assets/index.html
@@ -5,6 +5,7 @@
     <title>Park My Car</title>
     <script src="app.js"></script>
 
+    <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="app.css">
     <link rel="stylesheet" href="./vendor/leaflet/leaflet.css">
     <meta name="theme-color" content="hsl(210, 98%, 46%)">
